# Infinity-x-Chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SUMMARY.md  app.py  config.py  pyproject.toml  requirements.txt  run.sh  setup.sh
.specify/integrations/: claude.manifest.json  speckit.manifest.json
core/: llm.py  medical.py  session.py  stt.py  tts.py
pipeline/: audio.py  llm.py  store.py  stt.py  tts.py
rag/: knowledge.py  store.py
static/: dashboard.html  index.html
