[project]
name = "s2s-chatbot"
version = "0.1.0"
description = "Bangla speech-to-speech chatbot (Groq Whisper + Gemini Flash + edge-tts), web UI over ngrok"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "groq>=0.11.0",
    "google-genai>=0.3.0",
    "edge-tts>=6.1.12",
    "httpx>=0.27",
    "python-dotenv>=1.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
